Tarea #2828 - Permite añadir las subcuentas deducibles.

--- a/View/Modelo130.html.twig
+++ b/View/Modelo130.html.twig
@@ -1,5 +1,53 @@
 {% extends "Master/MenuTemplate.html.twig" %}
 
+{% block css %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('node_modules/jquery-ui-dist/jquery-ui.min.css') }}"/>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('node_modules/jquery-ui-dist/jquery-ui.min.js') }}"></script>
+
+    <script>
+        $(document).ready(function(){
+            $("#findSubaccount").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        method: "POST",
+                        url: '{{ fsc.url() }}',
+                        data: {action: 'autocomplete-subaccount', term: request.term},
+                        dataType: "json",
+                        success: function (results) {
+                            let values = [];
+                            results.forEach(function (element) {
+                                if (element.key === null || element.key === element.value) {
+                                    values.push(element);
+                                } else {
+                                    values.push({key: element.key, value: element.key + " | " + element.value});
+                                }
+                            });
+                            response(values);
+                        },
+                        error: function (msg) {
+                            alert(msg.status + " " + msg.responseText);
+                        }
+                    });
+                },
+                select: function (event, ui) {
+                    if (ui.item.key !== null) {
+                        $('form[name="add-subaccount"] input[name="codsubcuenta"]').val(ui.item.key);
+                    }
+                },
+                open: function (event, ui) {
+                    $(this).autocomplete('widget').css('z-index', 1500);
+                    return false;
+                }
+            });
+        });
+    </script>
+{% endblock %}
+
 {% block body %}
     <form action="{{ fsc.url() }}" method="post">
         <div class="container-fluid">
@@ -20,7 +68,8 @@
                                 <optgroup label="{{ company.nombre }}">
                                     {% for exercise in fsc.getAllExercises(company.idempresa) %}
                                         {% if exercise.codejercicio == fsc.codejercicio %}
-                                            <option value="{{ exercise.codejercicio }}" selected>{{ exercise.nombre }}</option>
+                                            <option value="{{ exercise.codejercicio }}"
+                                                    selected>{{ exercise.nombre }}</option>
                                         {% else %}
                                             <option value="{{ exercise.codejercicio }}">{{ exercise.nombre }}</option>
                                         {% endif %}
@@ -164,8 +213,8 @@
     </form>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="sales-tab" data-toggle="tab" href="#sales" role="tab"
-               aria-controls="sales" aria-selected="true" title="{{ trans('sales') }}">
+            <a class="nav-link {{ fsc.activeTab is empty ? 'active' : '' }}" id="sales-tab" data-toggle="tab" href="#sales" role="tab"
+               aria-controls="sales" aria-selected="{{ fsc.tabDeductibleSubaccount ? 'false' : 'true' }}" title="{{ trans('sales') }}">
                 <i class="fas fa-file-invoice-dollar" aria-hidden="true"></i>
                 <span class="d-none d-sm-inline-block">{{ trans('sales') }}</span>
                 <span class="badge badge-secondary">{{ fsc.customerInvoices|length }}</span>
@@ -187,9 +236,19 @@
                 <span class="badge badge-secondary">{{ fsc.accountingEntries|length }}</span>
             </a>
         </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link {{ fsc.activeTab == 'deductible-subaccount' ? 'active' : '' }}" id="deductible-subaccounts-tab" data-toggle="tab" href="#deductible-subaccounts"
+               role="tab"
+               aria-controls="deductible-subaccounts" aria-selected="{{ fsc.tabDeductibleSubaccount ? 'true' : 'false' }}"
+               title="{{ trans('deductible-subaccounts') }}">
+                <i class="fas fa-book" aria-hidden="true"></i>
+                <span class="d-none d-sm-inline-block">{{ trans('deductible-subaccounts') }}</span>
+                <span class="badge badge-secondary">{{ fsc.deductibleSubaccount.count() }}</span>
+            </a>
+        </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="sales" role="tabpanel" aria-labelledby="sales-tab">
+        <div class="tab-pane fade {{ fsc.activeTab is empty ? 'show active' : '' }}" id="sales" role="tabpanel" aria-labelledby="sales-tab">
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
@@ -389,6 +448,59 @@
                         <td class="text-right font-weight-bold">{{ trans('total-amount') }}</td>
                         <td class="text-right">{{ money(accountingTotalNeto) }}</td>
                     </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="tab-pane fade {{ fsc.activeTab == 'deductible-subaccount' ? 'show active' : '' }}" id="deductible-subaccounts" role="tabpanel"
+             aria-labelledby="deductible-subaccounts-tab">
+            <div class="container">
+                <div class="card my-4">
+                    <div class="card-body">
+                        <form name="add-subaccount" method="post" onsubmit="animateSpinner('add')">
+                            {{ formToken() }}
+                            <input type="hidden" name="action" value="add-deductible-subaccount">
+                            <input type="hidden" name="codsubcuenta" value="">
+                            <div class="input-group my-3">
+                                <input type="text" id="findSubaccount" class="form-control" placeholder="{{ trans('search-subaccount') }}">
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-outline-success">
+                                        <i class="fas fa-plus fa-fw"></i>
+                                        {{ trans('add') }}
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-sm table-hover">
+                    <thead>
+                    <tr>
+                        <th>{{ trans('code') }}</th>
+                        <th>{{ trans('description') }}</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for subaccount in fsc.deductibleSubaccount.all({}, {'codsubcuenta':'ASC'}, 0, 0) %}
+                        <tr>
+                            <td>{{ subaccount.codsubcuenta }}</td>
+                            <td>{{ subaccount.getSubcuenta().descripcion }}</td>
+                            <td>
+                                <form method="post" onsubmit="animateSpinner('add')">
+                                    {{ formToken() }}
+                                    <input type="hidden" name="id" value="{{ subaccount.id }}">
+                                    <input type="hidden" name="action" value="delete-deductible-subaccount">
+                                    <button type="submit" class="btn btn-danger btn-sm btn-spin-action">
+                                        <i class="fas fa-trash fa-fw"></i>
+                                        {{ trans('delete') }}
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
