Arreglada visualización del resumen en disposiivos móviles

--- a/View/Modelo130.html.twig
+++ b/View/Modelo130.html.twig
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                     <h2 class="h3 mt-3">
                         <i class="far fa-clipboard fa-fw"></i> {{ trans('summary') }}
                     </h2>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('tax-incomes') }}
                         <div class="input-group">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('tax-expenses') }}
                         <div class="input-group">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('net-total') }}
                         <div class="input-group">
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('pct-to-deduct') }}
                         <div class="input-group">
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ fsc.todeduct }}% {{ trans('after-deduct') }}
                         <div class="input-group">
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('previous-model') }}
                         <div class="input-group">
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('retentions') }}
                         <div class="input-group">
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-3 col-12">
                     <div class="form-group">
                         {{ trans('result') }}
                         <div class="input-group">
